<resources>
    <string name="app_name">DocAssist</string>

    <string-array name="tzone">
        <item>GMT(+5:30) Delhi,Kolkata</item>
        <item>GMT(+5:00) Srilanka, Colombo</item>
        <item>Choose another Timezone</item>
    </string-array>

    <string-array name="clinics">
        <item>Kerala Clinic</item>
        <item>Add New Clinic</item>
    </string-array>

    <string name="title_home">Home</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="btn_ok">OK</string>
    <string name="btn_pick">Single Pick From Gallery</string>
    <string name="btn_pick_mul"> Multiple Pick From Gallery</string>

    <string name="forgotpw"><a href="https://www.icliniq.com/users/forgetpass">Forgot password?</a></string>


    <string name="video_note"><![CDATA[&#8226;&#160;&#160;&#160;The video file size should be less than 100 MB.<br /><br />
    &#8226;&#160;&#160;&#160;Video file length should not be less than resolution 720.]]></string>


    <string name="action_settings">Settings</string>
    <string name="tips1"><![CDATA[&#8226;&#160;&#160;&#160;A well written answer will increase both follow-up and your reputation(brand).<br /><br />
    &#8226;&#160;&#160;&#160;Include possible causes, investigations and brief diagnosis in your answer.<br /><br />
    &#8226;&#160;&#160;&#160;Share your knowledge and personal research in the answer.]]></string>

    <string name="tips2"><![CDATA[&#8226;&#160;&#160;&#160;Answer on time.<br /><br />
    &#8226;&#160;&#160;&#160;Have your photo updated.<br /><br />
    &#8226;&#160;&#160;&#160;Update your treatment skills.]]></string>

    <string name="tips3"><![CDATA[&#8226;&#160;&#160;&#160;Patients will always read your articles.<br /><br />
    &#8226;&#160;&#160;&#160;Keep your articles crisp, useful and patient friendly.<br /><br />
    &#8226;&#160;&#160;&#160;The more the content on your profile will likely turn more visitors in to patients.]]></string>

    <string name="guidline"><![CDATA[&#8226;&#160;&#160;&#160;Greet and Welcome the patient.
    <br /><br />
    &#8226;&#160;&#160;&#160;Answer the query elaborately and share your research.
    <br /><br />
    &#8226;&#160;&#160;Answer made in point by points will increase the follow-up rate.
    <br /><br />
    &#8226;&#160;&#160;&#160;Do not mention your <b>name</b>, <b>email</b> or <b>number</b> anywhere in the answer.
    <br /><br />
    &#8226;&#160;&#160;&#160;Do not answer a query if it is not relevant to your practise.
    <br /><br />
    &#8226;&#160;&#160;&#160;Do not copy content from wikipedia or other sites.]]></string>

    <string name="hotline_guidline"><![CDATA[&#8226;&#160;&#160;&#160;Hotline service allows your patients to contact you anytime on chat like Whatsapp.
    <br /><br />
    &#8226;&#160;&#160;&#160;Your patients can make <b>exclusive subscription</b> with you to avail this service.
    <br /><br />
    &#8226;&#160;&#160;We suggest you to charge a premium fee.
    <br /><br />
    &#8226;&#160;&#160;&#160;Your earning from subscriptions will be released in two installments.
    <br /><br />
    &#8226;&#160;&#160;&#160;50% of your earning will be paid immediately after the subscription and the rest will be paid at the end of the subscription.

]]></string>





    <string name="large_text">

     <![CDATA[<br /><b>iCliniq</b> is an online doctor consultation platform where users post their health issues to get medical advice from medical doctors.
    <br /><br />
    Users can consult the doctors via queries, phone and video. iCliniq has it &rsquo;s own and big market-share of online patients from US, UK, Australia, India, Europe, Middle East and Israel.
    <br /><br />
    Team-icliniq is committed to provide the best in online healthcare. <b>&quot;Prevention is better than cure&quot;</b> is an old adage. Icliniq &#160; s vision is to ensure that all its users are correctly informed about their potential health issues and for the Doctor team at icliniq to help the users with prevention.
    <br /><br />
    <a href="https://www.icliniq.com/">icliniq.com</a> is brought to you by Orane Healthcare (I) Private Ltd. Team-icliniq consists of imminent doctors, researchers and programmers who work round the clock to innovate, create and implement the best web technologies for use of doctors, users and hospitals.
    <br /><br />
    We are happy of you being with us.
    <br /><br />
    Any questions, send an email to <a href="mailto:icliniq@icliniq.com">icliniq@icliniq.com</a>.
    <br /><br /><br />]]>

    </string>

    <string name="empty_directory">Empty Directory</string>
    <string name="chooser_title">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>


    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose a folder</string>



    <string name="edit_meeting_id">Meeting ID</string>
    <string name="edit_name">Your Name</string>
    <string name="main_title">Join a meeting</string>
    <string name="main_continue">Continue</string>
    <string name="meeting_join">Join</string>
    <string name="meeting_leave">Leave Meeting</string>
    <string name="meeting_mute">Toggle Mute</string>
    <string name="test_url">https://e2cszepr1g.execute-api.us-east-1.amazonaws.com/Prod/</string>
    <string name="preview_meeting_info">Ready to join meeting %1$s as %2$s.</string>
    <string name="device_management_title">Select devices</string>
    <string name="audio_device_title">Audio Device</string>
    <string name="volume_indicator">Volume Indicator</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="toggle_camera">Toggle Camera</string>
    <string name="speaker_button">Toggle Speaker</string>
    <string name="toggle_mute">Toggle Mute</string>
    <string name="screen_share_view">Screen Share</string>
    <string name="video_view">Video Collection</string>

    <!-- Notify users for errors -->
    <string name="user_notification_meeting_id_invalid">Meeting ID is invalid</string>
    <string name="user_notification_attendee_name_invalid">Attendee name is invalid</string>
    <string name="user_notification_permission_error">WebRTC cannot work without permissions</string>
    <string name="user_notification_meeting_start_error">There was an error starting the meeting. Please try again</string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>

</resources>
